adding c7all image build

--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -14,6 +14,81 @@ resources:
     seed:
       versionName: master
 
+  - name: c7all_dd_repo
+    type: gitRepo
+    integration: avinci_gh
+    pointer:
+      sourceName: dry-dock/c7all
+      branch: master
+
+  - name: c7all_dd_img
+    type: image
+    integration: shipDH
+    pointer:
+      sourceName: "drydock/c7all"
+    seed:
+      versionName: master
+
+  - name: c7nodall_dd_repo
+    type: gitRepo
+    integration: avinci_gh
+    pointer:
+      sourceName: dry-dock/c7nodall
+      branch: master
+
+  - name: c7nodall_dd_img
+    type: image
+    integration: shipDH
+    pointer:
+      sourceName: "drydock/c7nodall"
+    seed:
+      versionName: master
+
+  - name: c7pytall_dd_repo
+    type: gitRepo
+    integration: avinci_gh
+    pointer:
+      sourceName: dry-dock/c7pytall
+      branch: master
+
+  - name: c7pytall_dd_img
+    type: image
+    integration: shipDH
+    pointer:
+      sourceName: "drydock/c7pytall"
+    seed:
+      versionName: master
+
+  - name: c7javall_dd_repo
+    type: gitRepo
+    integration: avinci_gh
+    pointer:
+      sourceName: dry-dock/c7javall
+      branch: master
+
+  - name: c7javall_dd_img
+    type: image
+    integration: shipDH
+    pointer:
+      sourceName: "drydock/c7javall"
+    seed:
+      versionName: master
+
+  - name: c7cppall_dd_repo
+    type: gitRepo
+    integration: avinci_gh
+    pointer:
+      sourceName: dry-dock/c7cppall
+      branch: master
+
+  - name: c7cppall_dd_img
+    type: image
+    integration: shipDH
+    pointer:
+      sourceName: "drydock/c7cppall"
+    seed:
+      versionName: master
+
 jobs:
   - name: c7_x8664_build
     type: runSh
@@ -27,18 +102,75 @@ jobs:
             options:
               env:
                 - REL_VER: "master"
+                - IMG_OUT: "c7_dd_img"
           script:
             - pushd $(shipctl get_resource_state "c7_dd_repo")
             - REPO_COMMIT=$(shipctl get_resource_version_key "c7_dd_repo" "shaData.commitSha")
-            - IMG_OUT="c7_dd_img"
             - export IMG_NAME=$(shipctl get_resource_version_key $IMG_OUT "sourceName")
             - export DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
             - export DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
             - sudo docker build -t=$IMG_NAME:$REL_VER --pull .
             - sudo docker login -u $DH_USR_NAME -p $DH_PASS
             - sudo docker push $IMG_NAME:$REL_VER
-            - popd
       - OUT: c7_dd_img
+    on_success:
+      script:
+        - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT"
+        - shipctl put_resource_state_multi $IMG_OUT "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT" "BUILD_NUMBER=$BUILD_NUMBER"
+
+  - name: c7all_x8664_build
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: c7all_dd_repo
+      - IN: c7_dd_img
+      - TASK:
+          name: c7all_build
+          runtime:
+            options:
+              env:
+                - REL_VER: "master"
+                - IMG_OUT: "c7all_dd_img"
+          script:
+            - pushd $(shipctl get_resource_state "c7_dd_repo")
+            - REPO_COMMIT=$(shipctl get_resource_version_key "c7_dd_repo" "shaData.commitSha")
+            - export IMG_NAME=$(shipctl get_resource_version_key $IMG_OUT "sourceName")
+            - export DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
+            - export DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
+            - sudo docker build -t=$IMG_NAME:$REL_VER --pull .
+            - sudo docker login -u $DH_USR_NAME -p $DH_PASS
+            - sudo docker push $IMG_NAME:$REL_VER
+      - OUT: c7all_dd_img
+    on_success:
+      script:
+        - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT"
+        - shipctl put_resource_state_multi $IMG_OUT "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT" "BUILD_NUMBER=$BUILD_NUMBER"
+
+  - name: c7nodall_x8664_build
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: c7nodall_dd_repo
+      - IN: c7all_dd_img
+      - TASK:
+          name: c7nodall_build
+          runtime:
+            options:
+              env:
+                - REL_VER: "master"
+                - IMG_OUT: "c7nodall_dd_img"
+          script:
+            - pushd $(shipctl get_resource_state "c7_dd_repo")
+            - REPO_COMMIT=$(shipctl get_resource_version_key "c7_dd_repo" "shaData.commitSha")
+            - export IMG_NAME=$(shipctl get_resource_version_key $IMG_OUT "sourceName")
+            - export DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
+            - export DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
+            - sudo docker build -t=$IMG_NAME:$REL_VER --pull .
+            - sudo docker login -u $DH_USR_NAME -p $DH_PASS
+            - sudo docker push $IMG_NAME:$REL_VER
+      - OUT: c7nodall_dd_img
     on_success:
       script:
         - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT"
