adding new image c7

--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -103,9 +103,10 @@ jobs:
               env:
                 - REL_VER: "master"
                 - IMG_OUT: "c7_dd_img"
+                - RES_REPO: "c7_dd_repo"
           script:
-            - pushd $(shipctl get_resource_state "c7_dd_repo")
-            - REPO_COMMIT=$(shipctl get_resource_version_key "c7_dd_repo" "shaData.commitSha")
+            - pushd $(shipctl get_resource_state "$RES_REPO")
+            - REPO_COMMIT=$(shipctl get_resource_version_key "$RES_REPO" "shaData.commitSha")
             - export IMG_NAME=$(shipctl get_resource_version_key $IMG_OUT "sourceName")
             - export DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
             - export DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
@@ -132,9 +133,10 @@ jobs:
               env:
                 - REL_VER: "master"
                 - IMG_OUT: "c7all_dd_img"
+                - RES_REPO: "c7all_dd_repo"
           script:
-            - pushd $(shipctl get_resource_state "c7_dd_repo")
-            - REPO_COMMIT=$(shipctl get_resource_version_key "c7_dd_repo" "shaData.commitSha")
+            - pushd $(shipctl get_resource_state "$RES_REPO")
+            - REPO_COMMIT=$(shipctl get_resource_version_key "$RES_REPO" "shaData.commitSha")
             - export IMG_NAME=$(shipctl get_resource_version_key $IMG_OUT "sourceName")
             - export DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
             - export DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
@@ -161,6 +163,67 @@ jobs:
               env:
                 - REL_VER: "master"
                 - IMG_OUT: "c7nodall_dd_img"
+                - RES_REPO: "c7nodall_dd_repo"
+          script:
+            - pushd $(shipctl get_resource_state "$RES_REPO")
+            - REPO_COMMIT=$(shipctl get_resource_version_key "$RES_REPO" "shaData.commitSha")
+            - export IMG_NAME=$(shipctl get_resource_version_key $IMG_OUT "sourceName")
+            - export DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
+            - export DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
+            - sudo docker build -t=$IMG_NAME:$REL_VER --pull .
+            - sudo docker login -u $DH_USR_NAME -p $DH_PASS
+            - sudo docker push $IMG_NAME:$REL_VER
+      - OUT: c7nodall_dd_img
+    on_success:
+      script:
+        - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT"
+        - shipctl put_resource_state_multi $IMG_OUT "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT" "BUILD_NUMBER=$BUILD_NUMBER"
+
+  - name: c7pytall_x8664_build
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: c7pytall_dd_repo
+      - IN: c7all_dd_img
+      - TASK:
+          name: c7pytall_build
+          runtime:
+            options:
+              env:
+                - REL_VER: "master"
+                - IMG_OUT: "c7pytall_dd_img"
+                - RES_REPO: "c7pytall_dd_repo"
+          script:
+            - pushd $(shipctl get_resource_state "$RES_REPO")
+            - REPO_COMMIT=$(shipctl get_resource_version_key "$RES_REPO" "shaData.commitSha")
+            - export IMG_NAME=$(shipctl get_resource_version_key $IMG_OUT "sourceName")
+            - export DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
+            - export DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
+            - sudo docker build -t=$IMG_NAME:$REL_VER --pull .
+            - sudo docker login -u $DH_USR_NAME -p $DH_PASS
+            - sudo docker push $IMG_NAME:$REL_VER
+      - OUT: c7pytall_dd_img
+    on_success:
+      script:
+        - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT"
+        - shipctl put_resource_state_multi $IMG_OUT "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT" "BUILD_NUMBER=$BUILD_NUMBER"
+
+  - name: c7javall_x8664_build
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: c7javall_dd_repo
+      - IN: c7all_dd_img
+      - TASK:
+          name: c7pytall_build
+          runtime:
+            options:
+              env:
+                - REL_VER: "master"
+                - IMG_OUT: "c7javall_dd_img"
+                - RES_REPO: "c7javall_dd_repo"
           script:
             - pushd $(shipctl get_resource_state "c7_dd_repo")
             - REPO_COMMIT=$(shipctl get_resource_version_key "c7_dd_repo" "shaData.commitSha")
@@ -170,7 +233,7 @@ jobs:
             - sudo docker build -t=$IMG_NAME:$REL_VER --pull .
             - sudo docker login -u $DH_USR_NAME -p $DH_PASS
             - sudo docker push $IMG_NAME:$REL_VER
-      - OUT: c7nodall_dd_img
+      - OUT: c7javall_dd_img
     on_success:
       script:
         - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT"
