--- a/shippable.yml
+++ b/shippable.yml
@@ -915,6 +915,14 @@ jobs:
         switch: off
       - IN: ship_bits_gcp
         switch: off
+      - IN: c7cppall_dd_img
+        switch: off
+      - IN: c7javall_dd_img
+        switch: off
+      - IN: c7pytall_dd_img
+        switch: off
+      - IN: c7nodall_dd_img
+        switch: off
       - TASK:
           name: prep_c7_gce_image
           runtime:
