--- a/shippable.yml
+++ b/shippable.yml
@@ -102,24 +102,6 @@ jobs:
   - name: trig_gcp_img_prep
     type: runSh
     steps:
-      - IN: u16cppall_img
-        switch: off
-      - IN: u16phpall_img
-        switch: off
-      - IN: u16ruball_img
-        switch: off
-      - IN: u16scaall_img
-        switch: off
-      - IN: u16javall_img
-        switch: off
-      - IN: u16golall_img
-        switch: off
-      - IN: u16cloall_img
-        switch: off
-      - IN: u16pytall_img
-        switch: off
-      - IN: u16nodall_img
-        switch: off
       - TASK:
           script:
             - ls -al
@@ -132,7 +114,6 @@ jobs:
     steps:
       - IN: trig_gcp_img_prep
       - IN: prepami_repo
-      - IN: ship_bits_gcp
       - IN: u14nodall_dd_img
       - IN: u14pytall_dd_img
       - IN: u14cloall_dd_img
@@ -141,6 +122,17 @@ jobs:
       - IN: u14ruball_dd_img
       - IN: u14phpall_dd_img
       - IN: u14cppall_dd_img
+      - IN: u16cppall_dd_img
+      - IN: u16phpall_dd_img
+      - IN: u16ruball_dd_img
+      - IN: u16scaall_dd_img
+      - IN: u16golall_dd_img
+      - IN: u16cloall_dd_img
+      - IN: u16pytall_dd_img
+      - IN: u16nodall_dd_img
+      - IN: u16javall_dd_img
+      - IN: ship_bits_gcp
+        switch: off
       - TASK:
           name: prep_u14_gce_image
           runtime:
@@ -734,6 +726,15 @@ jobs:
     dependencyMode: strict
     steps:
       - IN: trig_gcp_img_prep
+      - IN: u16cppall_dd_img
+      - IN: u16phpall_dd_img
+      - IN: u16ruball_dd_img
+      - IN: u16scaall_dd_img
+      - IN: u16golall_dd_img
+      - IN: u16cloall_dd_img
+      - IN: u16pytall_dd_img
+      - IN: u16nodall_dd_img
+      - IN: u16javall_dd_img
       - IN: prepami_repo
         switch: off
       - IN: ship_bits_gcp
@@ -922,11 +923,8 @@ jobs:
       - IN: ship_bits_gcp
         switch: off
       - IN: c7cppall_dd_img
-        switch: off
       - IN: c7javall_dd_img
-        switch: off
       - IN: c7pytall_dd_img
-        switch: off
       - IN: c7nodall_dd_img
         switch: off
       - TASK:
@@ -1349,15 +1347,15 @@ jobs:
         switch: off
       - IN: baseami_params
         switch: off
-      - IN: u16cppall_img
-      - IN: u16phpall_img
-      - IN: u16ruball_img
-      - IN: u16scaall_img
-      - IN: u16javall_img
-      - IN: u16golall_img
-      - IN: u16cloall_img
-      - IN: u16pytall_img
-      - IN: u16nodall_img
+      - IN: u16cppall_dd_img
+      - IN: u16phpall_dd_img
+      - IN: u16ruball_dd_img
+      - IN: u16scaall_dd_img
+      - IN: u16golall_dd_img
+      - IN: u16cloall_dd_img
+      - IN: u16pytall_dd_img
+      - IN: u16nodall_dd_img
+      - IN: u16javall_dd_img
       - IN: u14nodall_dd_img
       - IN: u14pytall_dd_img
       - IN: u14cloall_dd_img
@@ -1366,6 +1364,7 @@ jobs:
       - IN: u14ruball_dd_img
       - IN: u14phpall_dd_img
       - IN: u14cppall_dd_img
+      - IN: u14javall_dd_img
       - IN: node_repo
       - IN: cexec_repo
       - IN: reqProc_x86_64_Ubuntu_14_04_prep
