--- a/shippable.yml
+++ b/shippable.yml
@@ -1733,15 +1733,15 @@ jobs:
         switch: off
       - IN: u16baseami_params
         switch: off
-      - IN: u16cppall_img
-      - IN: u16phpall_img
-      - IN: u16ruball_img
-      - IN: u16scaall_img
-      - IN: u16javall_img
-      - IN: u16golall_img
-      - IN: u16cloall_img
-      - IN: u16pytall_img
-      - IN: u16nodall_img
+      - IN: u16cppall_dd_img
+      - IN: u16phpall_dd_img
+      - IN: u16ruball_dd_img
+      - IN: u16scaall_dd_img
+      - IN: u16javall_dd_img
+      - IN: u16golall_dd_img
+      - IN: u16cloall_dd_img
+      - IN: u16pytall_dd_img
+      - IN: u16nodall_dd_img
       - IN: node_repo
       - IN: cexec_repo
       - IN: reqProc_x86_64_Ubuntu_16_04_prep
