--- a/shippable.yml
+++ b/shippable.yml
@@ -172,7 +172,7 @@ jobs:
       - IN: u14_x86_64_gcp_img_prep
       - IN: node_repo
       - IN: cexec_repo
-      - IN: reqProc_x86_64_Ubuntu_14_04_prep
+      - IN: u14_reqProc_x8664_build
       - IN: prepami_repo
         switch: off
       - IN: ship_bits_gcp
@@ -1367,7 +1367,7 @@ jobs:
       - IN: u14javall_dd_img
       - IN: node_repo
       - IN: cexec_repo
-      - IN: reqProc_x86_64_Ubuntu_14_04_prep
+      - IN: u14_reqProc_x8664_build
       - IN: ami_reqKick_repo
       - TASK:
           script:
@@ -1391,7 +1391,7 @@ jobs:
         switch: off
       - IN: cexec_repo
       - IN: node_repo
-      - IN: reqProc_x86_64_Ubuntu_14_04_prep
+      - IN: u14_reqProc_x8664_build
       - IN: ami_reqKick_repo
       - IN: baseami_prep
       - TASK:
